fix: in spring security 12 or + hava a bug for generate token add option in jvm for resolve